--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "@shopify/app-bridge": "^3.7.10",
     "@shopify/app-bridge-react": "^4.1.3",
     "@shopify/app-bridge-utils": "^3.5.1",
-    "@shopify/polaris": "^13.6.0",
+    "@shopify/polaris": "^13.9.5",
     "@tanstack/react-query": "^4.24.10",
     "@types/yup": "^0.32.0",
     "axios": "^1.3.4",
     "i18next": "^21.8.14",
     "next": "13.2.3",
+    "pusher-js": "^8.4.0",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
